cli/tests/snapshots/integration__run_images@wedge2.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="80.0" height="80.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 40.0 40.0 L 80.0 40.0 A 40.0 40.0 0.0 1 0 40.0 80.0 Z" fill="rgba(0, 0, 255, 1.0)" />
</svg>
