cli/tests/snapshots/integration__run_tests@check_approx.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
Running tests...
  check_approx.gleam/approx_examples
    Failure at line 5
      Actual   : 1.2
      Expected : 1.1
      Tolerance: 0.01
3 tests, 2 successes, 1 failure and 0 errors.
STDERR
