cli/tests/snapshots/integration__run_tests@check_eq.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
Running tests...
Failure at check_eq.gleam (string_examples:9)
  Actual  : "wrong string"
  Expected: "not this"
4 tests, 3 success(es), 1 failure(s) and 0 error(s).
STDERR
warning: Unused private function
  ┌─ /src/check_eq.gleam:3:1
  │
3 │ fn ignore_examples() {
  │ ^^^^^^^^^^^^^^^^^^^^ This private function is never used

Hint: You can safely remove it.
