cli/tests/snapshots/integration__run_tests@check_true_false.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
Running tests...
Failure at check_true_false.gleam (eq_examples:5)
  Actual  : False
  Expected: True
Failure at check_true_false.gleam (eq_examples:6)
  Actual  : True
  Expected: False
4 tests, 2 success(es), 2 failure(s) and 0 error(s).
STDERR
